k8s-resources/ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: po-service
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: po-service.033185fc7e8b483fae46.westus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: lb-app-mongo-jsapp
          servicePort: 80
        path: /
